crates/solidity-v2/testing/snapshots/cst_output/MappingType/named_both/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: This syntax was introduced in version '0.8.18'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/MappingType/named_both/input.sol:3:16]
   │
 3 │ mapping(string Foo => bytes32 Bar)
   │                ─┬─  
   │                 ╰─── Error occurred here.
───╯

Error: This syntax was introduced in version '0.8.18'.
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/MappingType/named_both/input.sol:3:31]
   │
 3 │ mapping(string Foo => bytes32 Bar)
   │                               ─┬─  
   │                                ╰─── Error occurred here.
───╯


SourceUnitStruct {
    members: SourceUnitMembers {
        elements: [
            ContractDefinition(
                ContractDefinitionStruct {
                    abstract_keyword: None,
                    contract_keyword: ContractKeyword {
                        range: 0..8,
                    },
                    name: Identifier {
                        range: 9..10,
                    },
                    specifiers: ContractSpecifiers {
                        elements: [],
                    },
                    open_brace: OpenBrace {
                        range: 11..12,
                    },
                    members: ContractMembers {
                        elements: [
                            StateVariableDefinition(
                                StateVariableDefinitionStruct {
                                    type_name: MappingType(
                                        MappingTypeStruct {
                                            mapping_keyword: MappingKeyword {
                                                range: 110..117,
                                            },
                                            open_paren: OpenParen {
                                                range: 117..118,
                                            },
                                            key_type: MappingKeyStruct {
                                                key_type: ElementaryType(
                                                    StringKeyword(
                                                        StringKeyword {
                                                            range: 118..124,
                                                        },
                                                    ),
                                                ),
                                                name: Some(
                                                    Identifier {
                                                        range: 125..128,
                                                    },
                                                ),
                                            },
                                            equal_greater_than: EqualGreaterThan {
                                                range: 129..131,
                                            },
                                            value_type: MappingValueStruct {
                                                type_name: ElementaryType(
                                                    BytesKeyword(
                                                        BytesKeyword {
                                                            range: 132..139,
                                                        },
                                                    ),
                                                ),
                                                name: Some(
                                                    Identifier {
                                                        range: 140..143,
                                                    },
                                                ),
                                            },
                                            close_paren: CloseParen {
                                                range: 143..144,
                                            },
                                        },
                                    ),
                                    attributes: StateVariableAttributes {
                                        elements: [],
                                    },
                                    name: Identifier {
                                        range: 152..153,
                                    },
                                    value: None,
                                    semicolon: Semicolon {
                                        range: 153..154,
                                    },
                                },
                            ),
                        ],
                    },
                    close_brace: CloseBrace {
                        range: 155..156,
                    },
                },
            ),
        ],
    },
}
